# ollama-interactive

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  compose.yaml  pyproject.toml  start.ps1  start.sh
docker/: entrypoint.sh
docs/: agent-trajectory-tooling.md  coding-benchmarks.md  token-efficiency.md  trajectory-profiling.md
ollama_code/: __main__.py  agent.py  agent_parsing.py  agent_protocol.py  cli.py  config.py  features.py  indexer.py  interrupts.py  ollama_client.py  prompts.py  sessions.py  tool_dependencies.py  tools.py
scripts/: anti_cheat_scan.py  coding_benchmark_eval.py  e2e_suite.py  gguf_inspect.py  live_matrix.py  live_model_gate.py  local_validation.py  model_resolution.py  nightly_self_improvement_report.py  ollama_perf_probe.py  ollama_pool_proxy.py  public_benchmark_eval.py  python_sdk_search_eval.py  question_quality_eval.py  report_outputs.py  self_host_tasks.txt  self_host_watchdog.sh  start-wsl-tmux.ps1  start-wsl-tmux.sh  terminal_bench_agent.py  terminal_bench_eval.py  test_imports.py  text_hygiene_scan.py  token_efficiency_eval.py  tool_speed_probe.py  trajectory_dataset_catalog.py  trajectory_dataset_fetch.py  trajectory_error_profile.py  trajectory_evidence_report.py  trajectory_profile.py  trajectory_task_review.py  trajectory_transcript_sampler.py  verification_eval.py  web_discovered_agent_dataset_analysis.py  workspace_temp.py
tests/: __init__.py  agent_test_support.py  test_agent.py  test_agent_failure_compression.py  test_agent_grounding_path_repair.py  test_agent_post_edit_validation.py  test_agent_shell_command_preflight.py  test_anti_cheat_scan.py  test_cli.py  test_coding_benchmark_eval.py  test_config.py  test_e2e_suite.py  test_gguf_inspect.py  test_indexer.py  test_live_matrix.py  test_live_model_gate.py  test_local_validation.py  test_model_resolution.py  test_nightly_self_improvement_report.py  test_ollama_client.py  test_ollama_perf_probe.py  test_ollama_pool_proxy.py  test_parser.py  test_public_benchmark_eval.py  test_question_quality_eval.py  test_sessions.py  test_text_hygiene_scan.py  test_token_efficiency_eval.py  test_tool_dependencies.py  test_tool_speed_probe.py  test_tools.py  test_trajectory_dataset_catalog.py  test_trajectory_dataset_fetch.py  test_trajectory_error_profile.py  test_trajectory_evidence_report.py  test_trajectory_profile.py  test_trajectory_task_review.py  (+3 more)
(+9 files in other folders)
