[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-code"
version = "0.1.0"
description = "A local coding CLI that drives Ollama models with safe workspace tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]

[project.scripts]
ollama-code = "ollama_code.cli:main"

[project.optional-dependencies]
tools = [
    "basedpyright",
    "check-jsonschema",
    "codespell",
    "coverage",
    "deptry",
    "hypothesis",
    "mypy",
    "py-spy",
    "pyright",
    "pip-audit",
    "pipdeptree",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-json-report",
    "pytest-timeout",
    "pytest-testmon",
    "pytest-xdist",
    "ruff",
    "scalene",
    "sqlite-vec",
    "sqlfluff",
    "tree-sitter",
    "tree-sitter-language-pack",
    "tox<4.54",
    "uv",
    "vulture",
    "yamllint",
]
eval = [
    "inspect-ai",
]
security = [
    "semgrep",
]

[tool.setuptools]
packages = ["ollama_code", "ollama_code.controller", "ollama_code.tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "__pycache__",
    "ollama-code-bench-*",
    "scratch",
    "verify_scratch",
]
